fix(expandable-search): use icon-01 as fill color when collapsed

--- a/packages/components/src/components/search/_search.scss
+++ b/packages/components/src/components/search/_search.scss
@@ -340,6 +340,15 @@
     .#{$prefix}--search-magnifier {
     pointer-events: none;
   }
+
+  .#{$prefix}--search--expandable .#{$prefix}--search-magnifier-icon {
+    fill: $icon-01;
+  }
+
+  .#{$prefix}--search--expandable.#{$prefix}--search--expanded
+    .#{$prefix}--search-magnifier-icon {
+    fill: $icon-02;
+  }
 }
 
 @include exports('search') {
